Fix Z-Index Problem

--- a/sodium-static/public/legacy.css
+++ b/sodium-static/public/legacy.css
@@ -156,7 +156,6 @@
     height: 50px;
     box-shadow: none!important;
     outline: none;
-    z-index: 999;
   }
   
   iframe#apploader {
